@@ -13,7 +13,13 @@ public class ForgeroConfiguration implements ForgeroConfigurationData {
 	@NotNull
 	public List<String> disabledResources = Collections.emptyList();
 	@NotNull
-	public List<String> disabledPacks = Collections.emptyList();
+	public List<String> disabledPacks = List.of(
+			"forgero:extended-handles-deprecated",
+			"forgero:extended-swords-deprecated",
+			"forgero:extended-tools-deprecated",
+			"forgero:material-deprecated",
+			"forgero:trinkets-deprecated"
+	);
 
 	// Recipes, upgrades, and loot
 	@NotNull
